# SassyJot-app

./: .gitignore  CMakeLists.txt  README.md  main.py
src/: ai_controller.py  app_window.cpp  app_window.py  card_controller.py  db_controller.py  file_controller.py  main.cpp  note_controller.py  project_api.cpp  project_controller.cpp  project_controller.py  tab_controller.cpp  tab_controller.py  tag_controller.py  task_controller.py  window_controller.cpp  window_controller.py
src/include/: app_window.h  controllers.h  db_api.h
src/res/: .gitignore  sassy.qrc  sassy_rc.py
src/res/html/: ai.html  cards.html  controls.html  dashboard.html  files.html  notes.html  project.html  settings.html  sidepanel.html  tags.html  task.html
src/res/html/scripts/: ai.js  calendar.js  controls.js  dashboard.js  editor.js  notes.js  project.js  tags.js  task.js
src/res/html/styles/: ai.css  calendar.css  controls.css  dashboard.css  editor.css  notes.css  project.css  settings.css  tags.css  task.css  theme.css
